--- a/CSS/index.css
+++ b/CSS/index.css
@@ -158,5 +158,8 @@ a{
 .btn-outline-danger:focus {
     box-shadow: none;
 }
-
+.valid{
+    box-shadow: 0 0 0 0.25rem rgb(255 101 92) !important;
+    border-bottom: none !important
+}
 
